Fix #4320: Button label only loading icon spacing

--- a/theme-base/components/button/_button.scss
+++ b/theme-base/components/button/_button.scss
@@ -195,6 +195,14 @@
 
         .p-button-loading-icon {
             margin: 0;
+
+            &.p-button-icon-left {
+                margin-right: $inlineSpacing;
+            }
+
+            &.p-button-icon-right {
+                margin-left: $inlineSpacing;
+            }
         }
     }
 }
